--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Магазин "Мишка"</title>
   </head>
-  <body>
+  <body><!--123-->
 
     <header class="page-header">
         <nav class="main-nav">
