--- a/source/index.html
+++ b/source/index.html
@@ -46,9 +46,7 @@
     <main class="page-main body__main">
 
       <div class="page-main__wrapper">
-        <h1 class="page-main__header main-topic">Милые штуки
-           ручной
-           работы для дома</h1>
+      <h1 class="page-main__header main-topic">Милые штуки ручной работы для дома</h1>
       </div>
       <section class="range">
         <ul class="range__list">
